tests/should_fail/undefined_function.nv
module undefined_function
// SHOULD FAIL: calling a function that doesn't exist
let x = totally_made_up_function(1, 2, 3)
